--- a/front-end-emakers/src/pages/Login/Login.css
+++ b/front-end-emakers/src/pages/Login/Login.css
@@ -1,10 +1,46 @@
-p{
+.user-login {
+    width: 400px;
+    margin: 0 auto;
+  }
+  
+  .login_title {
+    font-size: 40px;
     color: #5E2075;
-    font-family: Roboto;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-}
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  
+  .form-control {
+    display: flex;
+    flex-direction:column;
+    margin-bottom: 10px;
+    text-align: left;
+  }
+  
+  .form-control label {
+    margin-bottom: 5px;
+    color: #5E2075;
+    font-size: 16px;
+  }
+  
+  .form-control input {
+    border-radius: 35px;
+    border: 1px solid #BBBBBB;
+    height: 36px;
+    padding: 5px 10px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    background: #EFEFEF;
+  }
+  
+  .submit-button {
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
 
+  /* nao funciona */
+  .button-entrar{
+    margin-bottom: 50px;
+    text-align: center;
+  }
 
