--- a/front-end-emakers/src/pages/Login/Login.css
+++ b/front-end-emakers/src/pages/Login/Login.css
@@ -1,6 +1,21 @@
+.login-container {
+  display: flex;
+  height: 100vh;
+  box-sizing: border-box;
+  width: 100vw;
+}
+
+.logolateral{
+  height: 5em;
+  width: 15em;
+  align-self:flex-start;
+  margin-right: 35em;
+}
+
 .user-login {
-    width: 400px;
+    width: 60%;
     margin: 0 auto;
+    place-self: center;
   }
   
   .login_title {
@@ -9,18 +24,27 @@
     margin-bottom: 50px;
     text-align: center;
   }
+
+  #form{
+    display: flex;
+    flex-direction:column;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
+  }
   
   .form-control {
     display: flex;
     flex-direction:column;
-    margin-bottom: 10px;
     text-align: left;
+    width: 70%;
   }
   
   .form-control label {
-    margin-bottom: 5px;
+    margin-bottom: 0;
     color: #5E2075;
     font-size: 16px;
+    justify-content: flex-start;
   }
   
   .form-control input {
@@ -34,13 +58,38 @@
   
   .submit-button {
     width: 100%;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 3em;
+    margin-bottom: 2em;
   }
 
-  /* nao funciona */
-  .button-entrar{
-    margin-bottom: 50px;
-    text-align: center;
-  }
+.register-container{
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(180deg, #75206C 44.69%, #FE690E 100%);
+}
+
+.title-register{
+  font-size: 40px;
+  color: #ffffff;
+  margin-bottom: 1em;
+  margin-top: 4em;
+  text-align: center;
+}
+
+.text-register{
+  font-size: 40px;
+  color: #ffffff;
+  margin-bottom: 50px;
+  text-align: center;
+  margin-left: 2em;
+  margin-right: 2em;
+}
+
+.submit-button-register{
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
 
