--- a/front-end-emakers/src/pages/Register/Register.css
+++ b/front-end-emakers/src/pages/Register/Register.css
@@ -48,6 +48,11 @@
       box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
       background: #EFEFEF;
     }
+
+    .linklogin{
+      margin-top: 1em;
+      color: #75206C;
+    }
   
   .reg2-container{
     width: 60%;
