--- a/front-end-emakers/src/components/EntrarButton/EntrarButton.css
+++ b/front-end-emakers/src/components/EntrarButton/EntrarButton.css
@@ -11,13 +11,13 @@
     text-align: center;
     font-weight: 600;
     cursor: pointer;
-    width: 300px;
-    height: 50px;
+    width: 20em;
+    height: 4em;
     flex-shrink: 0;
   }
   
   .entrar-button--rounded {
-    border-radius: 100px;
+    border-radius: 10em;
   }
   
   .entrar-button--bordered {
