--- a/front-end-emakers/src/pages/Login/Login.css
+++ b/front-end-emakers/src/pages/Login/Login.css
@@ -73,7 +73,7 @@
 .title-register{
   font-size: 40px;
   color: #ffffff;
-  margin-bottom: 1em;
+  margin-bottom: 0;
   margin-top: 4em;
   text-align: center;
 }
