--- a/front-end-emakers/src/pages/Register/Register.css
+++ b/front-end-emakers/src/pages/Register/Register.css
@@ -49,6 +49,14 @@
       background: #EFEFEF;
     }
 
+    .select-control{
+      border-radius: 35px;
+      border: 1px solid #BBBBBB;
+      height: 50px;
+      padding: 5px 10px;
+      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+      background: #EFEFEF;
+    }
     .linklogin{
       margin-top: 1em;
       color: #75206C;
