--- a/front-end-emakers/src/pages/UserPage/UserPage.css
+++ b/front-end-emakers/src/pages/UserPage/UserPage.css
@@ -1,25 +1,42 @@
-.profile {
-    display: grid;
-    grid-template-areas:
-      'cover-photo'
-      'profile-picture'
-      'profile-info';
-    grid-template-rows: 200px 200px auto;
-    gap: 20px;
+
+.profile{
+  height: 100vh;
+  width: 100vw;
+  margin: 0px;
+  background-color: #ffff;
+}
+
+  .bobcapa{
+    width: 100%;
+    height: 30vh;
   }
   
-  .cover-photo {
-    grid-area: cover-photo;
-    background-color: #ccc;
+  .navbar{
+    position:absolute;
   }
-  
-  .profile-picture {
-    grid-area: profile-picture;
-    background-color: #aaa;
+
+  .logo-emakers{
+    height: 9vh;
+    margin-left: 1em;
   }
-  
-  .profile-info {
-    grid-area: profile-info;
-    background-color: #eee; 
+
+  .name-profile{
+    margin-right: 27%;
+    margin-top: 0;
+    font-size: 3em;
   }
-  
+
+  .fotoperfil{
+    width: 20vw;
+    height: 30vh;
+    border-radius: 50%;
+    position: absolute;
+    top: 20%; 
+    left: 2%;
+    z-index: 1;
+  }
+
+  .bio-profile{
+    margin-right: 38%;
+    margin-top: -2em;
+  }
