--- a/front-end-emakers/src/pages/UserPage/UserPage.css
+++ b/front-end-emakers/src/pages/UserPage/UserPage.css
@@ -12,12 +12,14 @@
   }
   
   .navbar{
-    position:absolute;
+    width: 100%;
+    position: absolute;
   }
 
   .logo-emakers{
     height: 9vh;
-    margin-left: 1em;
+    position:absolute;
+    left:2%;
   }
 
   .name-profile{
@@ -39,4 +41,21 @@
   .bio-profile{
     margin-right: 38%;
     margin-top: -2em;
+  }
+
+  .barra{
+    margin-top: 4em;
+    background-color: rgb(255, 146, 4);
+    height: 1px;
+    border: none;
+    margin-left: 10em;
+    margin-right: 10em;
+  }
+
+  .foto-prof{
+    width: 25vw;
+    height: 40vh;
+    margin-top: 5em;
+    margin-left: 2em;
+    margin-bottom: 5em;
   }
