--- a/front-end-emakers/src/pages/Login/Login.css
+++ b/front-end-emakers/src/pages/Login/Login.css
@@ -88,7 +88,7 @@
   margin-right: 2em;
 }
 
-.submit-button-register{
+.button-to-register{
   width: 100%;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -115,7 +115,11 @@
   
   .register-container {
     width: 70%;
-    margin-top: 2em;
+    margin-top: 1em;
+  }
+
+  .button-to-register{
+    margin-bottom: 2em;
   }
 }
 
@@ -176,9 +180,9 @@
     margin-right: 1em;
   }
   
-  .submit-button-register {
-    margin-top: 20px;
-    margin-bottom: 20px;
+  .button-to-register {
+    margin-top: 2em;
+    margin-bottom: 2em;
   }
 }
 
