--- a/front-end-emakers/src/pages/Register/Register.css
+++ b/front-end-emakers/src/pages/Register/Register.css
@@ -1,88 +1,161 @@
 .reg-container {
-    display: flex;
-    height: 100vh;
-    box-sizing: border-box;
-    width: 100vw;
+  display: flex;
+  height: 100vh;
+  box-sizing: border-box;
+  width: 100vw;
+}
+
+.reg-login {
+  width: 40%;
+  margin: 0 auto;
+  place-self: center;
+}
+
+.reg_title {
+  font-size: 40px;
+  color: #5E2075;
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+#form {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-control-reg {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  width: 70%;
+}
+
+.form-control-reg label {
+  margin-bottom: 5px;
+  color: #5E2075;
+  font-size: 16px;
+  justify-content: flex-start;
+}
+
+.form-control-reg input {
+  border-radius: 35px;
+  border: 1px solid #BBBBBB;
+  height: 36px;
+  padding: 5px 10px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background: #EFEFEF;
+}
+
+.gender-image-container {
+  display: flex;
+  gap: 10px;
+}
+
+.form-control-half {
+  flex: 1;
+}
+
+.select-control {
+  border-radius: 35px;
+  border: 1px solid #BBBBBB;
+  height: 50px;
+  padding: 5px 10px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background: #EFEFEF;
+}
+
+.linklogin {
+  margin-top: 1em;
+  color: #75206C;
+  margin-bottom: 1em;
+}
+
+.reg2-container {
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(180deg, #75206C 44.69%, #FE690E 100%);
+}
+
+.logocompleta {
+  height: 20em;
+  width: 20em;
+  align-self: center;
+  margin-top: 5em;
+}
+
+.text-reg2 {
+  font-size: 40px;
+  color: #ffffff;
+  margin-bottom: 30em;
+  text-align: center;
+  margin-left: 3em;
+  margin-right: 3em;
+}
+
+.button-page-register {
+  margin-top: 2em;
+}
+
+/* Estilos para dispositivos com largura entre 601px e 1024px */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  .reg-login {
+    width: 60%; /* Reduz a largura do reg-login */
+  }
+
+  .form-control-reg {
+    width: 80%; /* Define uma largura menor para form-control-reg */
+  }
+
+  .logocompleta {
+    height: 15em; /* Reduz a altura do logocompleta */
+    width: 15em; /* Reduz a largura do logocompleta */
+    margin-top: 3em; /* Reduz a margem superior do logocompleta */
+  }
+
+  .text-reg2 {
+    font-size: 32px; /* Reduz o tamanho da fonte do text-reg2 */
+    margin-bottom: 20em; /* Reduz a margem inferior do text-reg2 */
+    margin-left: 2em; /* Reduz a margem esquerda do text-reg2 */
+    margin-right: 2em; /* Reduz a margem direita do text-reg2 */
+  }
+}
+
+@media (max-width: 768px) {
+  .reg-container {
+    flex-direction: column;
+    align-items: center;
   }
 
   .reg-login {
-      width: 40%;
-      margin: 0 auto;
-      place-self: center;
-    }
-    
-    .reg_title {
-      font-size: 40px;
-      color: #5E2075;
-      margin-bottom: 50px;
-      text-align: center;
-    }
-  
-    #form{
-      display: flex;
-      flex-direction:column;
-      text-align: left;
-      align-items: center;
-      justify-content: center;
-    }
-    
-    .form-control-reg {
-      display: flex;
-      flex-direction:column;
-      text-align: left;
-      width: 70%;
-    }
-    
-    .form-control-reg label {
-      margin-bottom: 5px;
-      color: #5E2075;
-      font-size: 16px;
-      justify-content: flex-start;
-    }
-    
-    .form-control-reg input {
-      border-radius: 35px;
-      border: 1px solid #BBBBBB;
-      height: 36px;
-      padding: 5px 10px;
-      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      background: #EFEFEF;
-    }
-
-    .select-control{
-      border-radius: 35px;
-      border: 1px solid #BBBBBB;
-      height: 50px;
-      padding: 5px 10px;
-      box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-      background: #EFEFEF;
-    }
-    .linklogin{
-      margin-top: 1em;
-      color: #75206C;
-    }
-  
-  .reg2-container{
-    width: 60%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(180deg, #75206C 44.69%, #FE690E 100%);
+    width: 80%;
   }
 
-  .logocompleta{
-    height: 20em;
-    width: 20em;
-    align-self: center;
-    margin-top: 5em;
+  .gender-image-container{
+    margin-left: 1em;
+    margin-right: 1em;
   }
 
-  .text-reg2{
-    font-size: 40px;
-    color: #ffffff;
-    margin-bottom: 30em;
-    text-align:center;
-    margin-left: 3em;
-    margin-right: 3em;
+  .reg2-container {
+    width: 100%;
+    margin-bottom: 2em; /* Adiciona margem inferior para separar do conteúdo abaixo */
   }
-  
+
+  .logocompleta {
+    margin-top: 3em;
+  }
+
+  .text-reg2 {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .form-control-reg {
+    width: 90%;
+  }
+}
