--- a/front-end-emakers/src/pages/UserPage/UserPage.css
+++ b/front-end-emakers/src/pages/UserPage/UserPage.css
@@ -1,61 +1,167 @@
-
-.profile{
+.profile {
   height: 100vh;
   width: 100vw;
-  margin: 0px;
-  background-color: #ffff;
+  margin: 0;
+  background-color: #ffffff;
 }
 
-  .bobcapa{
-    width: 100%;
+.bobcapa {
+  width: 100%;
+  height: 30vh;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+  padding: 1rem;
+  width: 100%;
+  position: absolute;
+}
+
+.logo-navbar-container {
+  margin-right: 5%;
+  margin-left: 1%;
+}
+
+.logo-emakers {
+  height: 9vh;
+  left: 2%;
+}
+
+.icons-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.icon {
+  height: 5vh;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.name-profile {
+  margin-right: 27%;
+  margin-top: 0;
+  font-size: 3em;
+}
+
+.fotoperfil {
+  width: 20vw;
+  height: 30vh;
+  border-radius: 50%;
+  position: absolute;
+  top: 20%;
+  left: 2%;
+  z-index: 1;
+}
+
+.bio-profile {
+  margin-right: 38%;
+  margin-top: -2em;
+}
+
+.barra {
+  margin-top: 4em;
+  background-color: rgb(255, 146, 4);
+  height: 1px;
+  border: none;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.foto-prof {
+  width: 25vw;
+  height: 40vh;
+  margin-top: 5em;
+  margin-left: 2em;
+  margin-bottom: 5em;
+}
+
+/* Estilos para dispositivos com largura menor ou igual a 600px (Mobile) */
+@media screen and (max-width: 600px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.5rem;
+  }
+
+  .logo-navbar-container {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .logo-emakers {
+    height: 6vh;
+  }
+
+  .name-profile {
+    margin-right: 0;
+    margin-top: 1rem;
+    font-size: 2em;
+  }
+
+  .fotoperfil {
+    width: 50vw;
+    height: auto;
+    position: static;
+    margin: 1rem 0;
+  }
+
+  .bio-profile {
+    margin-right: 0;
+    margin-top: 0.5rem;
+  }
+
+  .barra {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .foto-prof {
+    width: 80vw;
+    height: auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+}
+
+/* Estilos para dispositivos com largura entre 601px e 1024px */
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  .navbar {
+    padding: 0.75rem;
+  }
+
+  .logo-emakers {
+    height: 7vh;
+  }
+
+  .name-profile {
+    margin-right: 20%;
+    font-size: 2.5em;
+  }
+
+  .fotoperfil {
+    width: 15vw;
+    height: 22.5vh;
+    top: 15%;
+  }
+
+  .bio-profile {
+    margin-right: 30%;
+  }
+
+  .barra {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+  .foto-prof {
+    width: 26vw;
     height: 30vh;
-  }
-  
-  .navbar{
-    width: 100%;
-    position: absolute;
-  }
-
-  .logo-emakers{
-    height: 9vh;
-    position:absolute;
-    left:2%;
-  }
-
-  .name-profile{
-    margin-right: 27%;
-    margin-top: 0;
-    font-size: 3em;
-  }
-
-  .fotoperfil{
-    width: 20vw;
-    height: 30vh;
-    border-radius: 50%;
-    position: absolute;
-    top: 20%; 
-    left: 2%;
-    z-index: 1;
-  }
-
-  .bio-profile{
-    margin-right: 38%;
-    margin-top: -2em;
-  }
-
-  .barra{
     margin-top: 4em;
-    background-color: rgb(255, 146, 4);
-    height: 1px;
-    border: none;
-    margin-left: 10em;
-    margin-right: 10em;
+    margin-left: 1em;
+    margin-bottom: 4em;
   }
-
-  .foto-prof{
-    width: 25vw;
-    height: 40vh;
-    margin-top: 5em;
-    margin-left: 2em;
-    margin-bottom: 5em;
-  }
+}
