--- a/front-end-emakers/src/pages/Register/Register.css
+++ b/front-end-emakers/src/pages/Register/Register.css
@@ -1,6 +1,6 @@
 .reg-container {
   display: flex;
-  height: 100vh;
+  height: 113vh;
   box-sizing: border-box;
   width: 100vw;
 }
@@ -12,9 +12,10 @@
 }
 
 .reg_title {
+  margin-top: 2em;
   font-size: 40px;
   color: #5E2075;
-  margin-bottom: 50px;
+  margin-bottom: 0%;
   text-align: center;
 }
 
@@ -35,6 +36,7 @@
 
 .form-control-reg label {
   margin-bottom: 5px;
+  margin-top: 1em;
   color: #5E2075;
   font-size: 16px;
   justify-content: flex-start;
@@ -58,7 +60,7 @@
   color: #5E2075;
   font-size: 16px;
   justify-content: flex-start;
-  margin-top: 0;
+  margin-top: 1em;
 }
 
 .form-control-img label{
@@ -120,6 +122,9 @@
 
 /* Estilos para dispositivos com largura entre 601px e 1024px */
 @media screen and (min-width: 601px) and (max-width: 1024px) {
+  .reg_title{
+    margin-top: 2em;
+  }
   .reg-login {
     width: 60%; 
   }
